# Real-Estate-Backend

./: .dockerignore  .example.env  .gitignore  Dockerfile  check.py  docker-compose.yml  locustfile.py  pyproject.toml  seed.py  test.py
alembic/: env.py
alembic/versions/: 02d0fee9211f_add_license_number_to_agent_applications.py  0d19eae09a65_add_users_table_and_update_foreign_keys.py  131677e15428_add_license_number_to_agent_applications.py  1837f0e8b4a2_add_agent_id_to_properties.py  2684c0e11dbb_refactor_customers_into_user_profiles.py  2e2c8d313bf1_add_license_number_to_agent_applications.py  709b0392d47f_add_agent_profiles_and_applications.py  883786d59a92_initial_schema.py  92879631e140_link_properties_to_agent_profiles.py  984eb4044d3c_fix_description_column_type.py  a9c0b32bacfb_move_payment_method_from_properties_to_.py  c6d3a68bcc77_add_agent_foreign_key_to_properties.py  d45f52a7ee52_add_user_role.py  e832bc1e8dbb_make_customer_phone_optional.py  ecd1cc1b3731_create_initial_tables.py
frontend/: Dockerfile  app.py
frontend/static/: main.css
frontend/templates/: base.html
frontend/templates/admin/: applications.html
frontend/templates/agent/: add_property.html  chatbot.html  properties.html
frontend/templates/auth/: login.html  signup.html  signup_agent.html  signup_customer.html  signup_pending.html  signup_role.html
newman/: real-estate-backend.postman_collection.json  real-estate-local.postman_environment.json
src/real_estate_backend/: __init__.py  main.py
tests/: conftest.py  test_customers.py  test_leads.py  test_properties.py
webhook/: generate_signature.py
websocket/: script.py
(+49 files in other folders)
