[project]
name = "real-estate-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdul Rehman", email = "m.abdulrehman.shoukat@gmial.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.0.1",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.1.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "websockets>=16.1.1",
]

[project.scripts]
real-estate-backend = "real_estate_backend:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
